[gd_scene load_steps=55 format=3 uid="uid://cvjbwqfw67l16"]

[ext_resource type="Texture2D" uid="uid://duo6071l0ofaw" path="res://assets/sprites/boss/Attack/Bringer-of-Death_Attack_1.png" id="1_3moi7"]
[ext_resource type="Script" uid="uid://0g3eth7bvjkt" path="res://scripts/boss/bringer_of_death.gd" id="1_j111i"]
[ext_resource type="PackedScene" uid="uid://dbp60ptoyj814" path="res://scenes/boss/boss_spell.tscn" id="2_h6mc5"]
[ext_resource type="Texture2D" uid="uid://l14idpfit6pi" path="res://assets/sprites/boss/Attack/Bringer-of-Death_Attack_2.png" id="2_j111i"]
[ext_resource type="Texture2D" uid="uid://d4nkhfxup78ru" path="res://assets/sprites/boss/Attack/Bringer-of-Death_Attack_3.png" id="3_h6mc5"]
[ext_resource type="Texture2D" uid="uid://cer81icxps351" path="res://assets/sprites/boss/Attack/Bringer-of-Death_Attack_4.png" id="4_dgkj5"]
[ext_resource type="Texture2D" uid="uid://bm0hopsminyd8" path="res://assets/sprites/boss/Attack/Bringer-of-Death_Attack_5.png" id="5_bwkry"]
[ext_resource type="Texture2D" uid="uid://bk51oe6a7h3yu" path="res://assets/sprites/boss/Attack/Bringer-of-Death_Attack_6.png" id="6_xj544"]
[ext_resource type="Texture2D" uid="uid://dtt44q08aung" path="res://assets/sprites/boss/Attack/Bringer-of-Death_Attack_7.png" id="7_s6rct"]
[ext_resource type="Texture2D" uid="uid://n7g1udk87nyt" path="res://assets/sprites/boss/Attack/Bringer-of-Death_Attack_8.png" id="8_y3eb1"]
[ext_resource type="Texture2D" uid="uid://2elysn4r2qi3" path="res://assets/sprites/boss/Attack/Bringer-of-Death_Attack_9.png" id="9_33g04"]
[ext_resource type="Texture2D" uid="uid://ckrvouse5rois" path="res://assets/sprites/boss/Attack/Bringer-of-Death_Attack_10.png" id="10_cjgfs"]
[ext_resource type="Texture2D" uid="uid://dxq6v4ilof87i" path="res://assets/sprites/boss/Cast/Bringer-of-Death_Cast_1.png" id="11_kebmp"]
[ext_resource type="Texture2D" uid="uid://b25k0smi15fo0" path="res://assets/sprites/boss/Cast/Bringer-of-Death_Cast_2.png" id="12_i0yih"]
[ext_resource type="Texture2D" uid="uid://7hdfv4tewv0a" path="res://assets/sprites/boss/Cast/Bringer-of-Death_Cast_3.png" id="13_lbo0e"]
[ext_resource type="Texture2D" uid="uid://byadpdiyg07ai" path="res://assets/sprites/boss/Cast/Bringer-of-Death_Cast_4.png" id="14_isbc4"]
[ext_resource type="Texture2D" uid="uid://cerlji2kbcfp0" path="res://assets/sprites/boss/Cast/Bringer-of-Death_Cast_5.png" id="15_5qc0i"]
[ext_resource type="Texture2D" uid="uid://ch8rpi45cepm2" path="res://assets/sprites/boss/Cast/Bringer-of-Death_Cast_6.png" id="16_w3isp"]
[ext_resource type="Texture2D" uid="uid://br35t18efrl1r" path="res://assets/sprites/boss/Cast/Bringer-of-Death_Cast_7.png" id="17_yxnxa"]
[ext_resource type="Texture2D" uid="uid://bfvdnr3n3v7rl" path="res://assets/sprites/boss/Cast/Bringer-of-Death_Cast_8.png" id="18_2kk8a"]
[ext_resource type="Texture2D" uid="uid://28y6h4how1ym" path="res://assets/sprites/boss/Cast/Bringer-of-Death_Cast_9.png" id="19_aby0j"]
[ext_resource type="Texture2D" uid="uid://wup2pd78rr8f" path="res://assets/sprites/boss/Death/Bringer-of-Death_Death_1.png" id="20_yufi6"]
[ext_resource type="Texture2D" uid="uid://diju471psi5r7" path="res://assets/sprites/boss/Death/Bringer-of-Death_Death_2.png" id="21_ary3s"]
[ext_resource type="Texture2D" uid="uid://cr1fe3csjukpt" path="res://assets/sprites/boss/Death/Bringer-of-Death_Death_3.png" id="22_y7wid"]
[ext_resource type="Texture2D" uid="uid://dtqdy8bpnet0i" path="res://assets/sprites/boss/Death/Bringer-of-Death_Death_4.png" id="23_mvp1f"]
[ext_resource type="Texture2D" uid="uid://d3fukshvbik0l" path="res://assets/sprites/boss/Death/Bringer-of-Death_Death_5.png" id="24_rf1ho"]
[ext_resource type="Texture2D" uid="uid://clpywcdbrdvds" path="res://assets/sprites/boss/Death/Bringer-of-Death_Death_6.png" id="25_wied5"]
[ext_resource type="Texture2D" uid="uid://cxdkbvcipngq7" path="res://assets/sprites/boss/Death/Bringer-of-Death_Death_7.png" id="26_1eld4"]
[ext_resource type="Texture2D" uid="uid://bwe5cwb1fyxyd" path="res://assets/sprites/boss/Death/Bringer-of-Death_Death_8.png" id="27_ji0aq"]
[ext_resource type="Texture2D" uid="uid://ca6e63stbtp0j" path="res://assets/sprites/boss/Death/Bringer-of-Death_Death_9.png" id="28_niyab"]
[ext_resource type="Texture2D" uid="uid://bwqb7xbv5f2jf" path="res://assets/sprites/boss/Death/Bringer-of-Death_Death_10.png" id="29_rylr2"]
[ext_resource type="Texture2D" uid="uid://cbmumf3ijqgla" path="res://assets/sprites/boss/Hurt/Bringer-of-Death_Hurt_1.png" id="30_fderq"]
[ext_resource type="Texture2D" uid="uid://bdg5s8uexd6s3" path="res://assets/sprites/boss/Hurt/Bringer-of-Death_Hurt_2.png" id="31_5wyj8"]
[ext_resource type="Texture2D" uid="uid://dnhvn8rxq13nd" path="res://assets/sprites/boss/Hurt/Bringer-of-Death_Hurt_3.png" id="32_af7gw"]
[ext_resource type="Texture2D" uid="uid://cot3avvllhblc" path="res://assets/sprites/boss/Idle/Bringer-of-Death_Idle_1.png" id="33_c1gik"]
[ext_resource type="Texture2D" uid="uid://bi8ynp3dqicji" path="res://assets/sprites/boss/Idle/Bringer-of-Death_Idle_2.png" id="34_8u1qb"]
[ext_resource type="Texture2D" uid="uid://ck71cwt4gau5c" path="res://assets/sprites/boss/Idle/Bringer-of-Death_Idle_3.png" id="35_0o50q"]
[ext_resource type="Texture2D" uid="uid://du08s53u42cx3" path="res://assets/sprites/boss/Idle/Bringer-of-Death_Idle_4.png" id="36_mykwn"]
[ext_resource type="Texture2D" uid="uid://cknk764cp2j0p" path="res://assets/sprites/boss/Idle/Bringer-of-Death_Idle_5.png" id="37_2mq5x"]
[ext_resource type="Texture2D" uid="uid://njn0yjngddfe" path="res://assets/sprites/boss/Idle/Bringer-of-Death_Idle_6.png" id="38_8a1k0"]
[ext_resource type="Texture2D" uid="uid://d38rgv61ktpxd" path="res://assets/sprites/boss/Idle/Bringer-of-Death_Idle_7.png" id="39_cnssp"]
[ext_resource type="Texture2D" uid="uid://chwsd73p6lp36" path="res://assets/sprites/boss/Idle/Bringer-of-Death_Idle_8.png" id="40_qbr2u"]
[ext_resource type="Texture2D" uid="uid://besqp8v78e7cs" path="res://assets/sprites/boss/Walk/Bringer-of-Death_Walk_1.png" id="41_ui5ev"]
[ext_resource type="Texture2D" uid="uid://bsq1fria0rdvh" path="res://assets/sprites/boss/Walk/Bringer-of-Death_Walk_2.png" id="42_mfry8"]
[ext_resource type="Texture2D" uid="uid://b7ryheaa02rv3" path="res://assets/sprites/boss/Walk/Bringer-of-Death_Walk_3.png" id="43_i4i6o"]
[ext_resource type="Texture2D" uid="uid://o2mw62a8ntbs" path="res://assets/sprites/boss/Walk/Bringer-of-Death_Walk_4.png" id="44_4qcvd"]
[ext_resource type="Texture2D" uid="uid://0orgkmjb7xpg" path="res://assets/sprites/boss/Walk/Bringer-of-Death_Walk_5.png" id="45_cpxsw"]
[ext_resource type="Texture2D" uid="uid://ppy0n1o2j3qy" path="res://assets/sprites/boss/Walk/Bringer-of-Death_Walk_6.png" id="46_ompuw"]
[ext_resource type="Texture2D" uid="uid://bcrxfu8n7s6me" path="res://assets/sprites/boss/Walk/Bringer-of-Death_Walk_7.png" id="47_oiouk"]
[ext_resource type="Texture2D" uid="uid://dc8a6cj4nl8ef" path="res://assets/sprites/boss/Walk/Bringer-of-Death_Walk_8.png" id="48_l568o"]

[sub_resource type="SpriteFrames" id="SpriteFrames_3w54u"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_3moi7")
}, {
"duration": 1.0,
"texture": ExtResource("2_j111i")
}, {
"duration": 1.0,
"texture": ExtResource("3_h6mc5")
}, {
"duration": 1.0,
"texture": ExtResource("4_dgkj5")
}, {
"duration": 1.0,
"texture": ExtResource("5_bwkry")
}, {
"duration": 1.0,
"texture": ExtResource("6_xj544")
}, {
"duration": 1.0,
"texture": ExtResource("7_s6rct")
}, {
"duration": 1.0,
"texture": ExtResource("8_y3eb1")
}, {
"duration": 1.0,
"texture": ExtResource("9_33g04")
}, {
"duration": 1.0,
"texture": ExtResource("10_cjgfs")
}],
"loop": false,
"name": &"attack",
"speed": 11.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_kebmp")
}, {
"duration": 1.0,
"texture": ExtResource("12_i0yih")
}, {
"duration": 1.0,
"texture": ExtResource("13_lbo0e")
}, {
"duration": 1.0,
"texture": ExtResource("14_isbc4")
}, {
"duration": 1.0,
"texture": ExtResource("15_5qc0i")
}, {
"duration": 1.0,
"texture": ExtResource("16_w3isp")
}, {
"duration": 1.0,
"texture": ExtResource("17_yxnxa")
}, {
"duration": 1.0,
"texture": ExtResource("18_2kk8a")
}, {
"duration": 1.0,
"texture": ExtResource("19_aby0j")
}],
"loop": false,
"name": &"cast",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("20_yufi6")
}, {
"duration": 1.0,
"texture": ExtResource("21_ary3s")
}, {
"duration": 1.0,
"texture": ExtResource("22_y7wid")
}, {
"duration": 1.0,
"texture": ExtResource("23_mvp1f")
}, {
"duration": 1.0,
"texture": ExtResource("24_rf1ho")
}, {
"duration": 1.0,
"texture": ExtResource("25_wied5")
}, {
"duration": 1.0,
"texture": ExtResource("26_1eld4")
}, {
"duration": 1.0,
"texture": ExtResource("27_ji0aq")
}, {
"duration": 1.0,
"texture": ExtResource("28_niyab")
}, {
"duration": 1.0,
"texture": ExtResource("29_rylr2")
}],
"loop": false,
"name": &"death",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("30_fderq")
}, {
"duration": 1.0,
"texture": ExtResource("31_5wyj8")
}, {
"duration": 1.0,
"texture": ExtResource("32_af7gw")
}],
"loop": false,
"name": &"hurt",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("33_c1gik")
}, {
"duration": 1.0,
"texture": ExtResource("34_8u1qb")
}, {
"duration": 1.0,
"texture": ExtResource("35_0o50q")
}, {
"duration": 1.0,
"texture": ExtResource("36_mykwn")
}, {
"duration": 1.0,
"texture": ExtResource("37_2mq5x")
}, {
"duration": 1.0,
"texture": ExtResource("38_8a1k0")
}, {
"duration": 1.0,
"texture": ExtResource("39_cnssp")
}, {
"duration": 1.0,
"texture": ExtResource("40_qbr2u")
}],
"loop": true,
"name": &"idle",
"speed": 11.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("41_ui5ev")
}, {
"duration": 1.0,
"texture": ExtResource("42_mfry8")
}, {
"duration": 1.0,
"texture": ExtResource("43_i4i6o")
}, {
"duration": 1.0,
"texture": ExtResource("44_4qcvd")
}, {
"duration": 1.0,
"texture": ExtResource("45_cpxsw")
}, {
"duration": 1.0,
"texture": ExtResource("46_ompuw")
}, {
"duration": 1.0,
"texture": ExtResource("47_oiouk")
}, {
"duration": 1.0,
"texture": ExtResource("48_l568o")
}],
"loop": true,
"name": &"walk",
"speed": 11.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3moi7"]
size = Vector2(73.5, 57.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j111i"]
size = Vector2(94, 115)

[sub_resource type="CircleShape2D" id="CircleShape2D_h6mc5"]
radius = 1063.5121

[node name="Boss" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 2
collision_mask = 4
script = ExtResource("1_j111i")
spell_scene = ExtResource("2_h6mc5")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_3w54u")
animation = &"walk"

[node name="AttackHitbox" type="Area2D" parent="AnimatedSprite2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatedSprite2D/AttackHitbox"]
position = Vector2(-27.75, 18.75)
shape = SubResource("RectangleShape2D_3moi7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(65, 36.5)
shape = SubResource("RectangleShape2D_j111i")
debug_color = Color(0.83022004, 0.2892436, 0.6785765, 0.41960785)

[node name="DetectionRange" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionRange"]
shape = SubResource("CircleShape2D_h6mc5")

[node name="SpellSpawnPoint" type="Marker2D" parent="."]
position = Vector2(43, -38)

[node name="MeleeTimer" type="Timer" parent="."]

[node name="CastTimer" type="Timer" parent="."]
